# ukrainian-magicals-internet-computer-nft

./: Cargo.toml  README.md  calls-example.md  canister_ids.json  deploy.sh  dfx.json  mint-example.md  rust-toolchain.toml  test.sh  uamagicals-nft-container.did
assets/: index.css  index.html  index.js
src/: http.rs  lib.rs
