[package]
name = "uamagicals_nft_container"
version = "0.1.0"
edition = "2018"

[dependencies]
candid = "0.7.4"
ic-cdk = "0.5.0"
ic-cdk-macros = "0.5.0"
ic-certified-map = "0.3"
serde = "1.0.132"
serde_cbor = "0.11.2"
percent-encoding = "2.1"
base64 = "0.13.0"
num-traits = "0.2.14"
cap-sdk = { git = "https://github.com/Psychedelic/cap.git", branch = "main" }

[lib]
crate-type = ["cdylib"]
